[package]
name = "test_roulage"
version = "0.1.0"
edition = "2018"
authors = ["Mayeul Gasc <mayeul.gasc@orange.fr>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
librobot = {git="https://github.com/ClubRobotInsat/librobot", branch = "dev-new-pid"}
heapless = "0.5.0"

